# splica

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
.claude/agent-memory/product-lead/: MEMORY.md  adoption-strategy.md  focus-group-round-15.md  focus-group-rounds.md  project_stress_test_personas.md  reference_workspace_tools.md
.claude/agent-memory/tech-lead/: MEMORY.md
.claude/agents/: product-lead.md  tech-lead.md
.claude/personas/: app-developer.md  broadcast-professional.md  cli-scripter.md  platform-engineer.md  toolchain-developer.md
.claude/projects/-Users-andrewcopp-Developer-splica/memory/: MEMORY.md  feedback_ci_monitoring.md  project_sprint21.md
.claude/skills/conduct-focus-group/: SKILL.md
.claude/skills/sprint-report/: SKILL.md
.claude/skills/tech-debt-review/: SKILL.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
benchmarks/: bench_aspect.sh  bench_ergonomics.sh  bench_errors.sh  bench_performance.sh  bench_wasm.sh  run_all.sh  stress_test.sh  summary.sh  wasm_demo.html
benchmarks/results/: wasm_bundle.md
crates/kvazaar-sys/: Cargo.toml  build.rs
crates/kvazaar-sys/src/: lib.rs
crates/splica-cli/: Cargo.toml
crates/splica-cli/src/: main.rs
crates/splica-cli/src/commands/: extract_audio.rs  factories.rs  format_detect.rs  join.rs  migrate.rs  mod.rs  probe.rs  process.rs  time.rs  trim.rs
crates/splica-cli/src/commands/process/: args.rs  mod.rs  reencode.rs  stream_copy.rs  wiring.rs
crates/splica-cli/tests/: adversarial_tests.rs  color_space_tests.rs  encode_matrix_tests.rs  error_contract_tests.rs  fixture_tests.rs  join_test.rs  malformed_input_tests.rs  mkv_tests.rs  passthrough_tests.rs  probe_test.rs  rate_passthrough_tests.rs  subtitle_passthrough_tests.rs  trim_test.rs
crates/splica-codec/: Cargo.toml
crates/splica-codec/src/: color.rs  error.rs  lib.rs
crates/splica-codec/src/aac/: decoder.rs  encoder.rs  mod.rs
crates/splica-codec/src/av1/: decoder.rs  encoder.rs  mod.rs
crates/splica-codec/src/h264/: avcc.rs  decoder.rs  encoder.rs  mod.rs  sps.rs
crates/splica-codec/src/h265/: decoder.rs  encoder.rs  ffi_helpers.rs  hvcc.rs  mod.rs  sps.rs
crates/splica-codec/src/opus/: decoder.rs  encoder.rs  mod.rs
crates/splica-codec/tests/: aac_integration.rs  h264_integration.rs  h265_integration.rs  opus_integration.rs
crates/splica-core/: Cargo.toml
crates/splica-core/src/: codec_strings.rs  container_detect.rs  error.rs  lib.rs  media.rs  smpte.rs  timestamp.rs  traits.rs  wasm_types.rs
crates/splica-core/src/error/: mod.rs  serde_impls.rs
crates/splica-core/src/media/: color.rs  frame.rs  mod.rs
crates/splica-filter/: Cargo.toml
crates/splica-filter/src/: crop.rs  lib.rs  scale.rs  volume.rs
crates/splica-filter/tests/: crop_tests.rs  scale_tests.rs  volume_tests.rs
crates/splica-mkv/: Cargo.toml
crates/splica-mkv/src/: demuxer.rs  ebml.rs  elements.rs  error.rs  lib.rs  muxer.rs  wasm.rs
crates/splica-mkv/tests/: demuxer_tests.rs  muxer_tests.rs
crates/splica-mp4/: Cargo.toml
crates/splica-mp4/src/: box_builders.rs  codec_strings.rs  demuxer.rs  error.rs  fmp4_box_builders.rs  fmp4_muxer.rs  integration_tests.rs  lib.rs  metadata.rs  mux_sample_table.rs  muxer.rs  sample_table.rs  test_helpers.rs  track.rs  track_parsing.rs  wasm.rs
crates/splica-mp4/src/boxes/: ctts.rs  ftyp.rs  hdlr.rs  mdhd.rs  mod.rs  mvhd.rs  stco.rs  stsc.rs  stsd.rs  stss.rs  stsz.rs  stts.rs  tkhd.rs
crates/splica-pipeline/: Cargo.toml
crates/splica-pipeline/src/: builder.rs  event.rs  lib.rs  pipeline.rs  tests.rs
crates/splica-wasm/: Cargo.toml
crates/splica-wasm/src/: lib.rs  probe.rs
crates/splica-webm/: Cargo.toml
crates/splica-webm/src/: demuxer.rs  ebml.rs  elements.rs  error.rs  lib.rs  muxer.rs  wasm.rs
crates/splica-webm/src/demuxer/: mod.rs  parsing.rs
crates/splica-webm/tests/: demuxer_tests.rs  muxer_tests.rs
docs/: STABILITY.md  api-guide.md  exit-codes.md  platform-support.md  reliability.md  scope.md
tests/fixtures/: README.md  bigbuckbunny_h264.mkv  bigbuckbunny_vp9_opus.webm
