[package]
name = "splica-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI binary for the splica media processing library"

[[bin]]
name = "splica"
path = "src/main.rs"

[dependencies]
splica-pipeline.workspace = true
