[package]
name = "splica-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI binary for the splica media processing library"

[[bin]]
name = "splica"
path = "src/main.rs"

[dependencies]
splica-core.workspace = true
splica-codec = { workspace = true, features = ["codec-h264"] }
splica-mp4.workspace = true
splica-filter.workspace = true
splica-pipeline.workspace = true
splica-webm.workspace = true
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
