[package]
name = "splica-codec"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Codec trait implementations and FFI wrappers for the splica media processing library"

[features]
codec-h264 = ["dep:openh264"]
codec-h265 = ["dep:libde265"]
codec-av1 = ["dep:dav1d", "dep:num-traits"]
codec-aac = ["dep:symphonia-core", "dep:symphonia-codec-aac"]
codec-aac-enc = ["dep:fdk-aac"]
codec-opus = ["dep:opus"]

[dependencies]
splica-core.workspace = true
bytes.workspace = true
thiserror.workspace = true
openh264 = { version = "0.9", optional = true }
libde265 = { version = "0.2", optional = true }
symphonia-core = { version = "0.5", optional = true }
symphonia-codec-aac = { version = "0.5", optional = true }
fdk-aac = { version = "0.8", optional = true }
opus = { version = "0.3", optional = true }
dav1d = { version = "0.11", optional = true }
num-traits = { version = "0.2", optional = true }
