[package]
name = "splica-codec"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Codec trait implementations and FFI wrappers for the splica media processing library"

[features]
default = ["all-codecs"]

# Individual codec flags
decode-h264 = ["dep:openh264"]
encode-h264 = ["dep:openh264"]
decode-h265 = ["dep:libde265"]
encode-h265 = ["dep:kvazaar-sys"]
decode-av1 = ["dep:dav1d", "dep:num-traits"]
encode-av1 = ["dep:rav1e"]
decode-aac = ["dep:symphonia-core", "dep:symphonia-codec-aac"]
encode-aac = ["dep:fdk-aac"]
decode-opus = ["dep:opus"]
encode-opus = ["dep:opus"]

# Convenience aliases (preserve old names for backward compatibility)
codec-h264 = ["decode-h264", "encode-h264"]
codec-h265 = ["decode-h265"]
codec-h265-enc = ["encode-h265"]
codec-av1 = ["decode-av1", "encode-av1"]
codec-aac = ["decode-aac"]
codec-aac-enc = ["encode-aac"]
codec-opus = ["decode-opus", "encode-opus"]

# Meta feature
all-codecs = [
    "decode-h264", "encode-h264",
    "decode-h265", "encode-h265",
    "decode-av1", "encode-av1",
    "decode-aac", "encode-aac",
    "decode-opus", "encode-opus",
]

[dependencies]
splica-core.workspace = true
bytes.workspace = true
thiserror.workspace = true
openh264 = { version = "0.9", optional = true }
libde265 = { version = "0.2", optional = true }
symphonia-core = { version = "0.5", optional = true }
symphonia-codec-aac = { version = "0.5", optional = true }
fdk-aac = { version = "0.8", optional = true }
opus = { version = "0.3", optional = true }
dav1d = { version = "0.11", optional = true }
num-traits = { version = "0.2", optional = true }
rav1e = { version = "0.8", optional = true, default-features = false, features = ["threading"] }
kvazaar-sys = { path = "../kvazaar-sys", optional = true }
