[package]
name = "splica-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types, traits, and error types for the splica media processing library"

[features]
serde = ["dep:serde", "dep:serde_json"]
wasm = ["dep:wasm-bindgen", "dep:js-sys"]

[dependencies]
bytes.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
