[package]
name = "splica-filter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed filter graph engine for the splica media processing library"

[dependencies]
bytes.workspace = true
splica-core.workspace = true
