[package]
name = "splica-pipeline"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "High-level pipeline orchestration for the splica media processing library"

[dependencies]
splica-core.workspace = true
splica-mp4.workspace = true
splica-webm.workspace = true
splica-mkv.workspace = true
splica-codec.workspace = true
splica-filter.workspace = true
