[package]
name = "splica-webm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "WebM (Matroska subset) demuxer and muxer for the splica media processing library"

[dependencies]
bytes.workspace = true
splica-core.workspace = true
thiserror.workspace = true
